users api documentation added
